--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </h5>
 
           <div class="tacho rotarImagen">
-            <img class="ppimg" src="imagenes/del.png" alt="" id="bt2" >
+            <img class="ppimg" src="imagenes/del.png" alt="" id="borrar" >
           </div>
 
         </div>
@@ -73,7 +73,7 @@
             <div class="card text-white bg-danger mb-3" style="max-width: 18rem;">
               <div class="card-header">Total carrito</div>
               <div class="card-body">
-                <h5 class="card-title">$2.000.000</h5>
+                <h5 class="card-title">$<span class="TOTAL">315</span></h5>
               </div>
             </div>
           </div>
